# ivs_sessions_browser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  git-init.sh  ivs_sessions_browser  ivs_sessions_browser.cpp  ivs_sessions_browser.cpp.sos  ivs_sessions_browser.py  ivs_sessions_browser.py.sos  ivs_sessions_browser.py.txt  pyproject.toml  quickgit.sh  requirements.txt  run_browser
docs/: FILTER_SYNTAX.md  KEY_BINDINGS.md  ROADMAP.md  USER_GUIDE.md
reports/: r41189-IVS-analysis-report-20250124-1906.txt  r41189-NASA-analysis-report-20250125-0050.txt  r41189-bkg-analysis-report-20250127-1459.txt  r41189.corr
scripts/: constants.py  ivs_sessions_browser_v2.py  ivs_sessions_browser_v2.py.sos  log_helper.py  log_helper.py.sos  log_setup.py  master.html  output.txt  run_sessions_browser.py  session_parser.py  sort_and_filter.py  structure.md  type_defs.py  url_helper.py
src/ivs_session_browser/: __init__.py
src/ivs_sessions_browser/: __init__.py  _version.py  defs.py  defs.py.new  draw_tui.py  draw_tui.py.sos  filter_and_sort.py  get_data_from_url.py  ivs_session_parser.py  read_data.py  sessions_browser.py  tui_state.py  ui_state.py
src/ivs_sessions_browser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
